:triumph:Fixed compatibility issue on iOS8 and IE11.

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,11 @@ a, a:visited {
     position: absolute;
     display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-align-items: center;
     align-items: center;
     z-index: 10;
 }
@@ -93,7 +96,9 @@ a, a:visited {
     border-radius: 4px;
     display: -webkit-flex;
     display: flex;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-align-items: center;
     align-items: center;
     width: 200px;
     height: 48px;
@@ -108,6 +113,7 @@ a, a:visited {
 }
 
 .arrow-wrapper {
+    left: 0;
     width: 100%;
     bottom: 32px;
     position: absolute;
